--- a/style.css
+++ b/style.css
@@ -158,3 +158,15 @@ body {
 .contato button:hover {
     background-color: #0056b3;
 }
+
+/*rodape*/
+.rodape{
+    text-align: center;
+    padding: 20px;
+    background-color: #fff; 
+    border-radius: 8px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.rodape img{
+    margin: 0 10px;
+}
